--- a/public/python_scripts/my_enhanced.html
+++ b/public/python_scripts/my_enhanced.html
@@ -1,18 +1,18 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head id="head1"><title>
 	Tentative Rulings - Online Services - LA Court
 </title><meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-<!-- Stylesheet -->
+
 
 
 
 
 </head>
 <body>
-<!--JQuery-->
+
 
 <div id="mainContainer">
 <div id="headerWrap">
-<!-- Start Translate -->
+
 
 <div class="translate">
     
@@ -99,20 +99,20 @@
 
 </div>
 </div>
-<!-- End Translate -->
-<!-- Font Size -->
-<!-- Start Logo -->
+
+
+
 <div class="logo">
 
 </div>
-<!-- End Logo -->
-<!-- Start Search -->
+
+
 <div class="searchWrap" role="search">
 
 </div>
-<!-- Survey -->
+
 </div>
-<!-- Start MainMenu -->
+
 
 
 <div class="container clearfix">
@@ -131,7 +131,7 @@
 <div class="nav clickable" id="nav2">
 <br/><span class="nav2">Pay Fines, Search Records...</span>
 </div>
-<!-- Drop Down menu begins here -->
+
 <div class="flexdropdownmenu container" id="flexmenu2">
 <div class="column">
 <div class="columntitle" tabindex="-1">
@@ -172,12 +172,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-            <a class="globalMenuLink" tabindex="0"
-               href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                <span class="globalMenuSpan">Hearing Reminder Service</span>
-            </a>
-        </div>-->
+
 <div class="listitem">
 
 </div>
@@ -193,12 +188,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem ">
-            <a class="globalMenuLink" tabindex="0"
-               href="/page/CI0107" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                <span class="globalMenuSpan">Tentative Rulings</span>
-            </a>
-        </div>-->
+
 <div class="listitem">
 
 </div>
@@ -214,12 +204,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-                                        <a class="globalMenuLink" tabindex="0"
-                                           href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Hearing Reminder Service</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -236,12 +221,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-                                        <a class="globalMenuLink" tabindex="0"
-                                           href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Hearing Reminder Service</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -254,16 +234,8 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem "
-       ><a class="globalMenuLink" tabindex="0"
-        href="/page/FL0106" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);"><span
-        class="globalMenuSpan">Child Custody Mediation Appt.</span></a>
-    </div>-->
-<!--<div class="listitem "
-       ><a class="globalMenuLink" tabindex="0"
-        href="/page/FL0107" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);"><span
-        class="globalMenuSpan">Counselor & Evaluator Directory</span></a>
-    </div>-->
+
+
 <div class="listitem">
 
 </div>
@@ -297,12 +269,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-                                        <a class="globalMenuLink" tabindex="0"
-                                           href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Hearing Reminder Service</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -328,12 +295,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-                                        <a class="globalMenuLink" tabindex="0"
-                                           href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Hearing Reminder Service</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -355,12 +317,7 @@
 <div class="column">
 <div class="columntitle"></div>
 <div class="listx" id="flexmenu24">
-<!--<div class="listitem">
-                                        <a class="globalMenuLink" tabindex="0"
-                                           href="/page/EXGV178" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Hearing Reminder Service</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -376,40 +333,8 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem">
-        <a class="globalMenuLink" tabindex="0" href="https://mycourtservices.lacourt.org/Appointment/Intro?anonyAppt=1&serviceModuleId=6AEB6FD9-F13E-E611-80DA-005056A3454C" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-            <span class="globalMenuSpan">Schedule Traffic Clerk Appointment</span>
-        </a>
-    </div>-->
-<!--							<div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0100"  onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-        <span class="globalMenuSpan">Pay your Ticket Online</span>
-        </a>
-    </div>
-    <div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0104"  onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-        <span class="globalMenuSpan">Find your Ticket By Driver's License</span>
-        </a>
-    </div>
-    <div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0105" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-        <span class="globalMenuSpan">Find your Ticket By Citation Number</span></a>
-    </div>
-    <div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0101" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-        <span class="globalMenuSpan">Request an Extension</span></a>
-    </div>
-    <div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0102" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-        <span class="globalMenuSpan">Request Traffic School</span>
-            </a>
-    </div>
-    <div class="listitem ">
-        <a class="globalMenuLink" tabindex="0" href="/page/TR0103" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
 
-            <span class="globalMenuSpan">Reserve Court Date</span>
-            </a>
-    </div>-->
+
 </div>
 <br/><br/>
 <div class="columntitle"></div>
@@ -426,14 +351,14 @@
 </div>
 <div class="navBorderRight"></div>
 </div>
-<!-- END DROP DOWN MENU -->
+
 <div aria-haspopup="true" class="left tabContainer" onfocus="return false;" onmouseout="try{navigationMenu.DeSelectTab($('.navBarTab', this));}catch(e){}" onmouseover="try{navigationMenu.SelectTabNoSubNav($('.navBarTab', this));}catch(e){}" tabindex="-1">
 <div class="navBorderLeft"></div>
 <div class="navBarTab navTab" id="navBarTab3" onclick="return processLink($('a.nav', $(this)));" onkeydown="return keyClick(event,$('a.nav', $(this)));" style="width:156px" tabindex="0">
 <div class="nav clickable" id="nav3">
 <br/><span class="nav2">Forms, Filing Fees...</span>
 </div>
-<!-- Drop Down menu begins here -->
+
 <div class="flexdropdownmenu container" id="flexmenu3">
 <div class="column" style="width:200px">
 <div class="columntitle"></div>
@@ -443,14 +368,7 @@
 <div class="column">
 <div class="columntitle"></div>
 <p>In addition to forms approved by the State Judicial Council, the Superior Court of Los Angeles has approved a variety of local forms that you may need to use as your case continues.</p>
-<!--						        <div class="listitem ">
-            <a class="globalMenuLink" tabindex="0" href="/page/TR0048" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-            <span class="globalMenuSpan">Electronic Filing (e-Filing)</span></a>
-        </div>
-        <div class="listitem ">
-            <a class="globalMenuLink" tabindex="0" href="/page/CI0017" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                <span class="globalMenuSpan">How Can I File by Fax?</span></a>
-        </div>-->
+
 </div>
 <div class="column" style="background: rgb(185, 181, 181); width: 1px; height: 200px; margin-right: 20px; float: left;"> </div>
 <div class="column" style="width:170px">
@@ -489,12 +407,7 @@
 </div>
 <div class="columntitle">Where Can I Get Help?</div>
 <div class="listx" id="DIV20">
-<!--<div class="listitem ">
-            <a class="globalMenuLink" tabindex="0"
-               href="/page/SH_RA001" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                <span class="globalMenuSpan">Where Can I Get Help in Person?</span>
-            </a>
-        </div>-->
+
 <div class="listitem">
 
 </div>
@@ -565,21 +478,7 @@
 <br/><br/>
 <div class="columntitle">Traffic Violators</div>
 <div class="listx" id="DIV14">
-<!--							        <div class="listitem "
-           ><a class="globalMenuLink" tabindex="0"
-            href="/page/TR0100" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);"><span
-            class="globalMenuSpan">Pay Ticket Online</span></a>
-        </div>
-        <div class="listitem "
-           ><a class="globalMenuLink" tabindex="0"
-            href="/page/TR0102" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);"><span
-            class="globalMenuSpan">Request Traffic School</span></a>
-        </div>
-        <div class="listitem "
-           ><a class="globalMenuLink" tabindex="0"
-            href="/page/TR0101" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);"><span
-            class="globalMenuSpan">Request an Extension</span></a>
-        </div>-->
+
 <div class="listitem">
 
 </div>
@@ -673,7 +572,7 @@
 <div class="columntitle">
                                     LA Court Divisions
                                 </div>
-<p>Legal matters are handled in one of LA Court's 9 divisions.</p> <!--<p>If you want to know which division applies to your case, please visit <a href="/page/SH0001" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" style="display:inline">Self Help</a> to learn more about your case type.</p>-->
+<p>Legal matters are handled in one of LA Court's 9 divisions.</p> 
 </div>
 <div class="column" style="background: rgb(185, 181, 181); width: 1px; height: 112px; margin-right: 20px; float: left;"> </div>
 <div class="column">
@@ -762,11 +661,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem ">
-                                        <a class="globalMenuLink" tabindex="0" href="/page/GI_CC001" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Contact the Court</span>
-                                        </a>
-                                    </div>-->
+
 </div>
 </div>
 <div class="column" style="background: rgb(185, 181, 181); width: 1px; height: 265px; margin-right: 20px; float: left;"> </div>
@@ -824,13 +719,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem "
-        >
-        <a class="globalMenuLink" tabindex="0"
-           href="/page/PDF0008" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-            <span class="globalMenuSpan">LASC Donation Program</span>
-        </a>
-    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -846,11 +735,7 @@
 <div class="column">
 <div class="columntitle">Community Focus</div>
 <div class="listx" id="DIV7">
-<!--<div class="listitem ">
-                                        <a class="globalMenuLink" tabindex="0" href="/page/GI_DI006" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">Diversity and Inclusion</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -860,11 +745,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem ">
-                                        <a class="globalMenuLink" tabindex="0" href="/page/GI_CO025" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                                            <span class="globalMenuSpan">The Good We Do</span>
-                                        </a>
-                                    </div>-->
+
 <div class="listitem">
 
 </div>
@@ -880,13 +761,7 @@
 <div class="listitem">
 
 </div>
-<!--<div class="listitem ">
-            <a class="globalMenuLink" tabindex="0"
-               href="/page/GI_NC003" onclick="try { navigationMenu.CancelBubble(event); } catch (e) { };return processLink(this);" onkeydown="return keyClick(event,this);">
-                <span class="globalMenuSpan">Information Regarding Courtroom Access</span>
-            </a>
-        </div>
-    </div>-->
+
 </div>
 </div>
 </div>
@@ -895,45 +770,45 @@
 </div>
 </div>
 </div>
-<!-- End MainMenu -->
+
 
 <div id="footerWrap">
-<!-- Start MainMenu -->
+
 <div id="footerWrap">
 
-<!-- Start Right Footer -->
+
 <div class="footerRight">
         Copyright © 
         2023 Superior Court of California, County of Los Angeles
     </div>
-<!-- End Right Footer -->
-<!-- Start Left Footer -->
+
+
 <div class="footerLeft">
  |  |  |  |  | 
 </div>
-<!-- End Left Footer -->
+
 </div>
-<!-- End MainMenu -->
+
 </div>
 </div>
-<!-- Scripts Loaded at End -->
-<!-- Provides performance benefit. Also fix for Asp.Net error, "The Controls collection cannot be modified because the control contains code blocks (i.e. < % ... % >)" -->
-<!-- See http://www.aspdotnet-suresh.com/2011/12/aspnet-controls-collection-cannot-be.html -->
-<!--JQuery-->
-
-
-<!--Google Analytics-->
-
-<!-- lascweb -->
 
 
 
 
- <!-- Nav Menu -->
-<!-- text-2-speech -->
-
-<!-- ajax control toolkit extension -->
 
 
-<!-- End Lascweb -->
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
 </div><div aria-live="assertive" aria-relevant="additions" class="ui-helper-hidden-accessible" role="log"></div></body></html>
